# BrokerApp

./: .gitignore  CMakeLists.txt  Editor.cpp  Editor.h  README.md  build_demo.sh  install_dependencies.sh
Classes/: App.cpp  App.h  BrokerConfig.h  Editor.cpp  Editor.h
Classes/Abstratctions/: Trader.cpp  Trader.h
Classes/BrokerLib/: BrokerColorsImgui.cpp  BrokerColorsImgui.h  CMakeLists.txt  DataSeriesRenderer.cpp  DataSeriesRenderer.h  DataSeriesRendererImgui.cpp  DataSeriesRendererImgui.h  IndicatorData.cpp  IndicatorData.h  IndicatorTickable.cpp  IndicatorTickable.h  OHLCData.cpp  OHLCData.h  OHLCRenderer.cpp  OHLCRenderer.h  PlotRenderer.cpp  PlotRenderer.h  PlotRendererImgui.cpp  PlotRendererImgui.h  SMAData.cpp  SMAData.h  SMARenderer.cpp  SMARenderer.h  VolumeData.cpp  VolumeData.h  VolumeRenderer.cpp  VolumeRenderer.h
Classes/Common/DataBase/: DBManager.cpp  DBManager.h  Paths.cpp  Paths.h
Classes/Common/Json/: BAJson.cpp  BAJson.h
Classes/Common/Utils/: BAString.cpp  BAString.h
Classes/Contexts/: BackTestingContext.cpp  BackTestingContext.h  Context.cpp  Context.h  Contextualizable.cpp  Contextualizable.h  LiveContext.cpp  LiveContext.h
Classes/Data/: AccountInfo.h  BarData.cpp  BarData.h  BarHistory.cpp  BarHistory.h  Bot.cpp  Bot.h  DataManager.cpp  DataManager.h  DataSource.cpp  DataSource.h  Order.cpp  Order.h  Parsable.h  Position.cpp  Position.h  ReversedData.h  Symbol.cpp  Symbol.h  TickData.cpp  TickData.h  User.cpp  User.h
Classes/Helpers/: ImageLoader.cpp  ImageLoader.h  JsonUtils.h  PlotHelper.h  Utils.h  graph.h
Classes/Networking/: APIManager.cpp  APIManager.h  APIRouter.cpp  APIRouter.h  NetCommon.h  NetMessage.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketManager.h
Classes/Networking/API/: APIManager.cpp  APIManager.h  APIRouter.cpp
Classes/Networking/API/Routes/: BotRouter.cpp  BotRouter.h  OrderRouter.cpp  OrderRouter.h  StrategyRouter.cpp  StrategyRouter.h  UserRouter.cpp  UserRouter.h
Classes/Networking/API/Services/: BinanceService.cpp  BinanceService.h  BotService.cpp  BotService.h  KLineService.cpp  KLineService.h  OrderService.cpp  OrderService.h  StrategyService.cpp  StrategyService.h  UserService.cpp  UserService.h
Classes/Networking/Binance/: LocalKeys.h  RestApiManager.cpp  RestApiManager.h  SocketManager.cpp  SocketManager.h  SymbolInfo.cpp  SymbolInfo.h
Classes/Networking/Parsers/: BinanceParser.h
Classes/Networking/Routes/: KLineRouter.cpp  KLineRouter.h  SymbolRouter.cpp  SymbolRouter.h  UserRouter.cpp  UserRouter.h
Classes/Networking/Server/: HttpServer.cpp  HttpServer.h  Request.cpp  Request.h
Classes/Networking/Services/: KLineService.cpp  KLineService.h  SymbolService.cpp  SymbolService.h  UserService.cpp  UserService.h
Classes/Networking/WS/: WSClient.h  WSCommon.h  WSConnection.h  WSMessage.h  WSQueue.h
Classes/Networking/WebSocket/: OLCNet.h  WSClient.h  WSCommon.h  WSConnection.h  WSMessage.h
Classes/Networking/http/: APIManager.h  APIRouter.h
Classes/Networking/http/Routes/: KLineRouter.h  (+2 more)
Classes/Networking/ws/: WSClient.h  WSConnection.h  WSQueue.h  WebSocketManager.cpp  WebSocketManager.h
Classes/Nodes/: Add.cpp  Add.h  BarValueNode.cpp  BarValueNode.h  BaseNode.cpp  BaseNode.h  BollingerNode.cpp  BollingerNode.h  Counter.cpp  Counter.h  CrossCounter.cpp  CrossCounter.h  CrossNode.cpp  CrossNode.h  DownSequenceNode.cpp  DownSequenceNode.h  EMANode.cpp  EMANode.h  GraphNode.cpp  GraphNode.h  INode.cpp  INode.h  IndicatorBaseNode.cpp  IndicatorBaseNode.h  Node.h  NodeType.h  PSARNode.cpp  PSARNode.h  SMANode.cpp  SMANode.h  ShowOutput.cpp  ShowOutput.h  SourceNode.cpp  SourceNode.h  TRIXNode.cpp  TRIXNode.h  TestAddNode.cpp  TestAddNode.h  TestMuliplyNode.cpp  TestMuliplyNode.h  (+13 more)
Classes/Tickables/: Bollinger.cpp  Bollinger.h  Indicator.cpp  Indicator.h  SMA.cpp  SMA.h  Strategy.cpp  Strategy.h  Tickable.cpp  Tickable.h
Classes/Tickables/Indicators/: Bollinger.cpp  Bollinger.h  EMA.cpp  EMA.h  Indicator.cpp  Indicator.h  MFI.cpp  MFI.h  PSAR.cpp  PSAR.h  SMA.cpp  SMA.h  TRIX.cpp  TRIX.h  VWAP.cpp  VWAP.h  WMA.cpp  WMA.h
Classes/Tickables/Strategies/: IndicatorFromChartExample.cpp  IndicatorFromChartExample.h  IndicatorToChartExample.cpp  IndicatorToChartExample.h  ManualStrategy.cpp  ManualStrategy.h  Strategy.cpp  Strategy.h  TestStrategy.cpp  TestStrategy.h  TradeNodeStrategy.cpp  TradeNodeStrategy.h
Classes/Tickers/: Ticker.cpp  Ticker.h
Classes/Widget+Tickables/: CandleChart.cpp  CandleChart.h
Classes/Widgets/: BackTestToolbar.cpp  BackTestToolbar.h  CandleChart.cpp  CandleChart.h  Chart.cpp  Chart.h  ChartView.cpp  ChartView.h  Charts.cpp  Charts.h  ConnectView.cpp  ConnectView.h  DataLoader.cpp  DataLoader.h  DownloaderView.cpp  DownloaderView.h  DownloaderView_old.cpp  Indicators.cpp  Indicators.h  IndicatorsView.cpp  IndicatorsView.h  LiveCandleChart.cpp  LiveCandleChart.h  LoginView.cpp  LoginView.h  MainMenuBar.cpp  MainMenuBar.h  MainSubplotRenderer.cpp  MainSubplotRenderer.h  NodesList.cpp  NodesList.h  OrderLog.cpp  OrderLog.h  OrderLogTable.h  ProfitAndLosses.cpp  ProfitAndLosses.h  ProfitAndLossesView.cpp  ProfitAndLossesView.h  SimulationController.cpp  SimulationController.h  (+19 more)
Classes/Widgets/NewCandleChart/: ChartRenderer.cpp  ChartRenderer.h  ChartSliderView.cpp  ChartSliderView.h  MainChartRenderer.cpp  MainChartRenderer.h  MainSubplotRenderer.cpp  MainSubplotRenderer.h  NewChartView.cpp  NewChartView.h  RenderInterval.h  SubplotRenderer.cpp  SubplotRenderer.h  SubplotRendererDelegate.h  VolumeSubplotRenderer.cpp  VolumeSubplotRenderer.h
Classes/Widgets/PlotItem/: OrderPlot.cpp  OrderPlot.h  PlotItem.cpp  PlotItem.h
Classes/Widgets/StrategyEditor/: BaseNode.cpp  BaseNode.h  SMANode.cpp  SMANode.h  StrategyEditor.cpp  StrategyEditor.h  TestNode.cpp  TestNode.h
Classes/Widgets/SubWidgets/: BufferingBar.cpp  BufferingBar.h  DateChooser.cpp  DateChooser.h  Spinner.cpp  Spinner.h
Resources/: Info.plist.in  api_keys.json  api_keys_example.json  tato.json  test_data.json
Resources/Html/: failure-styles.css  failure.html  success.html
common/: App.cpp
(+2 files in other folders)
